Fixed padding under header on tablet

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -159,6 +159,10 @@ nav.submenu {
 	background: #383838;
 }
 
+#access {
+	margin-bottom: 0;
+}
+
 #access ~ nav.submenu {
 	display: block;
 }
